--- a/client/src/components/pages/tabComponents/tab.js.css
+++ b/client/src/components/pages/tabComponents/tab.js.css
@@ -10,7 +10,9 @@
         height: 2.4rem;
     }
 }
-
+.mdScreen.price {
+    width: 100px;
+}
 .tab-icon-devices {
     width: 130px;
     height: 130px;
@@ -48,9 +50,15 @@
     text-align: center;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 16px;
+    padding:0;
     list-style: none;
     color: var(--main-grey);
-    margin: 0 12%;
+    margin: 0 auto;
+}
+@media(min-width:700px) {
+    .tab-nav-container {
+        margin: 0 11%;
+    }
 }
 
 ul li:hover {
