--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scrollbar-base-color: black;
+
 /* 
   font-family: 'Cantarell', sans-serif;
 
@@ -28,3 +30,5 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
